# vulcanus-proxmox

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  LICENSE  Pipfile  README.md  containers.yaml  devenv.nix  fileserver.yaml  hosts.yaml  pyproject.toml  rancheros.yaml  vars.yaml  wireguard.yaml  zfs.yaml
ansible/: containers.yaml  fileserver.yaml  hosts.yaml  netdata.yaml  proxmox-notifications.yaml  proxmoxer.yaml  rancheros.yaml  sanoid.yaml  terraform.yaml  update-hosts.yaml  vars.yaml  zfs.yaml
ansible/templates/: netdata.conf.j2  postfix.cf.j2  rancheros-cloud-config.yml.j2  sanoid.conf  server_wg0.conf.j2  smb.conf.j2
docs/: automatic-ripping-machine.md  disk_management.md  network.md  talos.md
kubernetes/apps/: audio-pvc.yaml  audio-rw-pvc.yaml  books-pvc.yaml  borg-backups-pvc.yaml  games-pvc.yaml  image-update-automation.yaml  kustomization.yaml  media-pvc.yaml  photos-pvc.yaml  podinfo.yaml  rancher-key.yaml  salamander.yaml  syncthing-pvc.yaml
kubernetes/cluster/: apps.yaml  automatic-ripping-machine.yaml  flux-customizations.yaml  infrastructure.yaml
kubernetes/flux-customizations/: flux-webhook.yaml  image-update-automation.yaml  kustomization.yaml  webhook-token.yaml
kubernetes/flux-system/: gotk-sync.yaml
kubernetes/infrastructure/: audio-pv.yaml  audio-rw-arm-pv.yaml  audio-rw-pv.yaml  basic-auth.yaml  books-pv.yaml  borg-backups-pv.yaml  (+28 more)
templates/: ganesha.conf.j2  nfs.exports.j2  rancheros-cloud-config.yml.j2  resilio_sync.conf.j2  sanoid.conf  server_wg0.conf.j2  smb.conf.j2
terraform/: .terraform.lock.hcl  main.tf
(+206 files in other folders)
