[project]
name = "vulcanus-proxmox"
version = "0.1.0"
description = "Mostly ansible for vulcanus server configuration."
authors = [
    { name = "Willy Weiskopf", email = "william@weiskopf.me" }
]
dependencies = [
    "ansible>=10.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true
